--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
               placeholder="Title..."
               type="text"
             />
-            <input id="js-add-btn" type="submit" value="Add" />
+            <input class="js-add-btn" type="submit" value="Add" />
           </form>
         </div>
       </div>
     </header>
     <main>
       <div class="app-container">
-        <div class="inner-app-container" id="js-app-inner-container"></div>
+        <div id="js-app-inner-container"></div>
       </div>
     </main>
   </body>
